Use new unmodifiable collections and utility methods
Use String.repeat, Objects,requireNonNullElse
and unmodifiable collections.